[project]
name = "ulauncher-vscode-recent"
version = "0.1.0"
description = "Open recent VS Code folders and files using Ulauncher"
authors = [
    "Mihir Chaturvedi <plibither8@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/plibither8/ulauncher-vscode-recent"
repository = "https://github.com/plibither8/ulauncher-vscode-recent"
documentation = "https://github.com/plibither8/ulauncher-vscode-recent"

keywords = ["ulauncher", "extension", "code", "vscode"]

classifiers = [
    "Topic :: Desktop Environment"
]

# Requirements
[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
